# drg

./: Cargo.toml
.github/workflows/: rust.yml
src/: dice.rs  direction.rs  hex.rs  main.rs  utils.rs
src/board/: board.rs  coordinates.rs  direction.rs  mod.rs  shape.rs  tile.rs
src/creature/: mod.rs
src/damage/: kind.rs  mod.rs
src/dice/: dices.rs  mod.rs
