[package]
name = "drg"
version = "0.1.0"
edition = "2021"
authors = ["Cléo Rebert <cleo.rebert@gmail.com>"]
repository = "https://github.com/constantoine/drg"
description = "An unofficial, unlicensed port of DRG: The Board Game."
categories = ["games"]
keywords = ["game"]

[dependencies]
rand = {version = "0.8.5", features = ["small_rng", "getrandom"], default-features = false }
sdl2 = {version = "0.35.2", features = ["gfx", "bundled", "ttf"]}
