[package]
name = "drg"
version = "0.1.0"
edition = "2021"
authors = ["Cléo Rebert <cleo.rebert@gmail.com>"]
repository = "https://github.com/constantoine/drg"
description = "An unofficial, unlicensed port of DRG: The Board Game."
categories = ["games"]
keywords = ["game"]

[dependencies]
priority-queue = "2.1.0"

[dependencies.rand]
version = "0.8.5"
features = ["small_rng", "getrandom"]
default-features = false

[dependencies.fontdb]
version = "0.21.0"
features = ["fs"]

[dependencies.sdl2]
version = "0.37.0"
features = ["gfx", "ttf", "image"]
default-features = false